--- a/doctype.html
+++ b/doctype.html
@@ -2,7 +2,7 @@
 <html>
       <body>
 
-            <h1>this is a heady</h1>
+            <h1>this is a heading</h1>
             <p> this is a paragraph</P>
       </body>
 </html>
